--- a/style.css
+++ b/style.css
@@ -22,24 +22,36 @@ body {
     flex-direction: column;
     height: 100vh;
     width: 40vw;
+    align-items: center;
 }
 
 .logo-container {
+    margin-top: 150px;
+    margin-bottom: 350px;
     height: 120px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 
     background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    font-family: "Norse Bold", sans-serif;
+    font-size: 4.2rem;
 }
 
 .logo {
     height: 100px;
 }
 
-.left-side > div {
+.copyright {
     color: white;
-    font-family: "Norse Bold", sans-serif;
-    font-size: 4.2rem;
 }
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+
 
