--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 html {
     font-size: 16px;
+    box-sizing: border-box;
 }
+
 body {
     display: flex;
     flex-direction: row;
@@ -23,6 +25,13 @@ body {
     height: 100vh;
     width: 40vw;
     align-items: center;
+}
+
+.right-side {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
 }
 
 .logo-container {
@@ -53,9 +62,51 @@ a {
     color: white;
 }
 
+.form-holder {
+    box-shadow: 3px;
+}
+
+.form-title {
+    margin: 0;
+    font-size: 1.6rem;
+}
+
 form {
     display: flex;
     flex-direction: row;
+    gap: 100px;
 }
 
+.form-column > div {
+    width: 190px;
+}
+
+.form-column {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+input:focus:valid {
+    outline: 1.5px solid blue;
+}
+
+input {
+    border: 1.5px solid #E5E7EB;
+    border-radius: 5px;
+    width: 180px;
+    height: 17px;
+}
+
+input:invalid {
+    border-color: red;
+}
+
+input:focus:invalid {
+    outline: 0.1px solid red;
+}
+
+label {
+    font-size: 0.7rem;
+}
 
